@@ -18,13 +18,30 @@
 
 package org.apache.hadoop.yarn.server.nodemanager.containermanager.launcher;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.apache.hadoop.test.PlatformAssumptions.assumeWindows;
 import static org.apache.hadoop.test.PlatformAssumptions.assumeNotWindows;
-import static org.junit.Assert.*;
-import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.anyBoolean;
+import static org.mockito.Mockito.anyLong;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.atLeastOnce;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import java.io.BufferedReader;
+import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.FileReader;
@@ -32,7 +49,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.nio.ByteBuffer;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -48,19 +64,22 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.function.Supplier;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
-import com.google.common.base.Supplier;
-import com.google.common.collect.Lists;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.FSDataInputStream;
+import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.FileUtil;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.fs.UnsupportedFileSystemException;
+import org.apache.hadoop.io.IOUtils;
 import org.apache.hadoop.security.Credentials;
 import org.apache.hadoop.security.token.SecretManager.InvalidToken;
 import org.apache.hadoop.test.GenericTestUtils;
+import org.apache.hadoop.util.Lists;
 import org.apache.hadoop.util.Shell;
 import org.apache.hadoop.util.Shell.ExitCodeException;
 import org.apache.hadoop.util.StringUtils;
@@ -96,6 +115,7 @@ import org.apache.hadoop.yarn.server.nodemanager.ContainerExecutor;
 import org.apache.hadoop.yarn.server.nodemanager.ContainerExecutor.ExitCode;
 import org.apache.hadoop.yarn.server.nodemanager.DefaultContainerExecutor;
 import org.apache.hadoop.yarn.server.nodemanager.LinuxContainerExecutor;
+import org.apache.hadoop.yarn.server.nodemanager.LocalDirsHandlerService;
 import org.apache.hadoop.yarn.server.nodemanager.NodeManager.NMContext;
 import org.apache.hadoop.yarn.server.nodemanager.NodeStatusUpdater;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.BaseContainerManagerTest;
@@ -107,20 +127,25 @@ import org.apache.hadoop.yarn.server.nodemanager.containermanager.launcher.Conta
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.linux.privileged.PrivilegedOperationExecutor;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.linux.runtime.DockerLinuxContainerRuntime;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.ContainerLocalizer;
+import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.ResourceLocalizationService;
+import org.apache.hadoop.yarn.server.nodemanager.executor.ContainerStartContext;
 import org.apache.hadoop.yarn.server.nodemanager.recovery.NMNullStateStoreService;
 import org.apache.hadoop.yarn.server.nodemanager.security.NMContainerTokenSecretManager;
 import org.apache.hadoop.yarn.server.nodemanager.security.NMTokenSecretManagerInNM;
 import org.apache.hadoop.yarn.server.security.ApplicationACLsManager;
+import org.apache.hadoop.yarn.server.security.AMSecretKeys;
 import org.apache.hadoop.yarn.server.utils.BuilderUtils;
 import org.apache.hadoop.yarn.util.Apps;
 import org.apache.hadoop.yarn.util.AuxiliaryServiceHelper;
 import org.apache.hadoop.yarn.util.LinuxResourceCalculatorPlugin;
 import org.apache.hadoop.yarn.util.ResourceCalculatorPlugin;
-import org.hamcrest.CoreMatchers;
-import org.junit.Assert;
-import org.junit.Assume;
-import org.junit.Before;
-import org.junit.Test;
+import org.apache.hadoop.yarn.util.resource.Resources;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.mockito.ArgumentCaptor;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 
 public class TestContainerLaunch extends BaseContainerManagerTest {
 
@@ -142,7 +167,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     super();
   }
 
-  @Before
+  @BeforeEach
   public void setup() throws IOException {
     conf.setClass(
         YarnConfiguration.NM_MON_RESOURCE_CALCULATOR,
@@ -156,7 +181,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     File shellFile = null;
     File tempFile = null;
     String badSymlink = Shell.WINDOWS ? "foo@zz_#!-+bar.cmd" :
-      "foo@zz%_#*&!-+= bar()";
+      "-foo@zz%_#*&!-+= bar()";
     File symLinkFile = null;
 
     try {
@@ -201,11 +226,11 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       = new Shell.ShellCommandExecutor(new String[]{tempFile.getAbsolutePath()}, tmpDir);
 
       shexc.execute();
-      assertEquals(shexc.getExitCode(), 0);
+      assertThat(shexc.getExitCode()).isEqualTo(0);
       //Capture output from prelaunch.out
 
       List<String> output = Files.readAllLines(Paths.get(localLogDir.getAbsolutePath(), ContainerLaunch.CONTAINER_PRE_LAUNCH_STDOUT),
-          Charset.forName("UTF-8"));
+          StandardCharsets.UTF_8);
       assert(output.contains("hello"));
 
       symLinkFile = new File(tmpDir, badSymlink);
@@ -228,7 +253,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
   }
 
   // test the diagnostics are generated
-  @Test (timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testInvalidSymlinkDiagnostics() throws IOException  {
 
     File shellFile = null;
@@ -278,12 +304,12 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       String diagnostics = null;
       try {
         shexc.execute();
-        Assert.fail("Should catch exception");
+        fail("Should catch exception");
       } catch(ExitCodeException e){
         diagnostics = e.getMessage();
       }
-      Assert.assertNotNull(diagnostics);
-      Assert.assertTrue(shexc.getExitCode() != 0);
+      assertNotNull(diagnostics);
+      assertTrue(shexc.getExitCode() != 0);
       symLinkFile = new File(tmpDir, symLink);
     }
     finally {
@@ -303,7 +329,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     }
   }
 
-  @Test(timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testWriteEnvExport() throws Exception {
     // Valid only for unix
     assumeNotWindows();
@@ -336,22 +363,23 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     String shellContent =
         new String(Files.readAllBytes(Paths.get(shellFile.getAbsolutePath())),
             StandardCharsets.UTF_8);
-    Assert.assertTrue(shellContent
+    assertTrue(shellContent
         .contains("export HADOOP_COMMON_HOME=\"/opt/hadoopcommon\""));
     // Whitelisted variable overridden by container
-    Assert.assertTrue(shellContent.contains(
+    assertTrue(shellContent.contains(
         "export HADOOP_MAPRED_HOME=\"/opt/hadoopbuild\""));
     // Available in env but not in whitelist
-    Assert.assertFalse(shellContent.contains("HADOOP_HDFS_HOME"));
+    assertFalse(shellContent.contains("HADOOP_HDFS_HOME"));
     // Available in env and in whitelist
-    Assert.assertTrue(shellContent.contains(
+    assertTrue(shellContent.contains(
         "export HADOOP_YARN_HOME=${HADOOP_YARN_HOME:-\"nodemanager_yarn_home\"}"
       ));
     fos.flush();
     fos.close();
   }
 
-  @Test(timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testWriteEnvExportDocker() throws Exception {
     // Valid only for unix
     assumeNotWindows();
@@ -387,22 +415,23 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     String shellContent =
         new String(Files.readAllBytes(Paths.get(shellFile.getAbsolutePath())),
             StandardCharsets.UTF_8);
-    Assert.assertTrue(shellContent
+    assertTrue(shellContent
         .contains("export HADOOP_COMMON_HOME=\"/opt/hadoopcommon\""));
     // Whitelisted variable overridden by container
-    Assert.assertTrue(shellContent.contains(
+    assertTrue(shellContent.contains(
         "export HADOOP_MAPRED_HOME=\"/opt/hadoopbuild\""));
     // Available in env but not in whitelist
-    Assert.assertFalse(shellContent.contains("HADOOP_HDFS_HOME"));
+    assertFalse(shellContent.contains("HADOOP_HDFS_HOME"));
     // Available in env and in whitelist
-    Assert.assertTrue(shellContent.contains(
+    assertTrue(shellContent.contains(
         "export HADOOP_YARN_HOME=${HADOOP_YARN_HOME:-\"nodemanager_yarn_home\"}"
     ));
     fos.flush();
     fos.close();
   }
 
-  @Test(timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testWriteEnvOrder() throws Exception {
     // Valid only for unix
     assumeNotWindows();
@@ -463,13 +492,18 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
             StandardCharsets.UTF_8);
     // First make sure everything is there that's supposed to be
     for (String envVar : env.keySet()) {
-      Assert.assertTrue(shellContent.contains(envVar + "="));
+      assertTrue(shellContent.contains(envVar + "="));
     }
+    // The whitelist vars should not have been added to env
+    // They should only be in the launch script
     for (String wlVar : whitelistVars) {
-      Assert.assertTrue(shellContent.contains(wlVar + "="));
+      assertFalse(env.containsKey(wlVar));
+      assertTrue(shellContent.contains(wlVar + "="));
     }
+    // Non-whitelist nm vars should be in neither env nor in launch script
     for (String nwlVar : nonWhiteListEnv) {
-      Assert.assertFalse(shellContent.contains(nwlVar + "="));
+      assertFalse(env.containsKey(nwlVar));
+      assertFalse(shellContent.contains(nwlVar + "="));
     }
     // Explicitly Set NM vars should be before user vars
     for (String nmVar : trackedNmVars) {
@@ -477,7 +511,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         // Need to skip nm vars and whitelist vars
         if (!trackedNmVars.contains(userVar) &&
             !whitelistVars.contains(userVar)) {
-          Assert.assertTrue(shellContent.indexOf(nmVar + "=") <
+          assertTrue(shellContent.indexOf(nmVar + "=") <
               shellContent.indexOf(userVar + "="));
         }
       }
@@ -485,14 +519,14 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     // Whitelisted vars should be before explicitly set NM vars
     for (String wlVar : whitelistVars) {
       for (String nmVar : trackedNmVars) {
-        Assert.assertTrue(shellContent.indexOf(wlVar + "=") <
+        assertTrue(shellContent.indexOf(wlVar + "=") <
             shellContent.indexOf(nmVar + "="));
       }
     }
   }
 
-
-  @Test (timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testInvalidEnvSyntaxDiagnostics() throws IOException  {
 
     File shellFile = null;
@@ -528,17 +562,17 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       String diagnostics = null;
       try {
         shexc.execute();
-        Assert.fail("Should catch exception");
+        fail("Should catch exception");
       } catch(ExitCodeException e){
         //Capture diagnostics from prelaunch.stderr
         List<String> error = Files.readAllLines(Paths.get(localLogDir.getAbsolutePath(), ContainerLaunch.CONTAINER_PRE_LAUNCH_STDERR),
-            Charset.forName("UTF-8"));
+            StandardCharsets.UTF_8);
         diagnostics = StringUtils.join("\n", error);
       }
-      Assert.assertTrue(diagnostics.contains(Shell.WINDOWS ?
+      assertTrue(diagnostics.contains(Shell.WINDOWS ?
           "is not recognized as an internal or external command" :
           "command not found"));
-      Assert.assertTrue(shexc.getExitCode() != 0);
+      assertTrue(shexc.getExitCode() != 0);
     }
     finally {
       // cleanup
@@ -549,7 +583,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     }
   }
 
-  @Test(timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testEnvExpansion() throws IOException {
     Path logPath = new Path("/nm/container/logs");
     String input =
@@ -558,23 +593,31 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
             + Apps.crossPlatformify("HADOOP_HOME") + "/share/hadoop/common/lib/*"
             + ApplicationConstants.CLASS_PATH_SEPARATOR
             + Apps.crossPlatformify("HADOOP_LOG_HOME")
-            + ApplicationConstants.LOG_DIR_EXPANSION_VAR;
+            + ApplicationConstants.LOG_DIR_EXPANSION_VAR
+            + " " + ApplicationConstants.JVM_ADD_OPENS_VAR;
 
     String res = ContainerLaunch.expandEnvironment(input, logPath);
 
+    String additionalJdk17PlusOptions =
+        "--add-opens=java.base/java.lang=ALL-UNNAMED " +
+        "--add-exports=java.base/sun.net.dns=ALL-UNNAMED " +
+        "--add-exports=java.base/sun.net.util=ALL-UNNAMED";
+    String expectedAddOpens = Shell.isJavaVersionAtLeast(17) ? additionalJdk17PlusOptions : "";
+
     if (Shell.WINDOWS) {
-      Assert.assertEquals("%HADOOP_HOME%/share/hadoop/common/*;"
+      assertEquals("%HADOOP_HOME%/share/hadoop/common/*;"
           + "%HADOOP_HOME%/share/hadoop/common/lib/*;"
-          + "%HADOOP_LOG_HOME%/nm/container/logs", res);
+          + "%HADOOP_LOG_HOME%/nm/container/logs" + " " + expectedAddOpens, res);
     } else {
-      Assert.assertEquals("$HADOOP_HOME/share/hadoop/common/*:"
+      assertEquals("$HADOOP_HOME/share/hadoop/common/*:"
           + "$HADOOP_HOME/share/hadoop/common/lib/*:"
-          + "$HADOOP_LOG_HOME/nm/container/logs", res);
+          + "$HADOOP_LOG_HOME/nm/container/logs" + " " + expectedAddOpens, res);
     }
     System.out.println(res);
   }
 
-  @Test (timeout = 20000)
+  @Test
+  @Timeout(value = 20)
   public void testContainerLaunchStdoutAndStderrDiagnostics() throws IOException {
 
     File shellFile = null;
@@ -608,15 +651,15 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       String diagnostics = null;
       try {
         shexc.execute();
-        Assert.fail("Should catch exception");
+        fail("Should catch exception");
       } catch(ExitCodeException e){
         diagnostics = e.getMessage();
       }
       // test stderr
-      Assert.assertTrue(diagnostics.contains("error"));
+      assertTrue(diagnostics.contains("error"));
       // test stdout
-      Assert.assertTrue(shexc.getOutput().contains("hello"));
-      Assert.assertTrue(shexc.getExitCode() == 2);
+      assertTrue(shexc.getOutput().contains("hello"));
+      assertTrue(shexc.getExitCode() == 2);
     }
     finally {
       // cleanup
@@ -657,13 +700,13 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     Container container = mock(Container.class);
     when(container.getContainerId()).thenReturn(cId);
     when(container.getLaunchContext()).thenReturn(containerLaunchContext);
-    when(container.getLocalizedResources()).thenReturn(null);
+    when(container.localizationCountersAsString()).thenReturn("1,2,3,4,5");
     Dispatcher dispatcher = mock(Dispatcher.class);
     EventHandler<Event> eventHandler = new EventHandler<Event>() {
       public void handle(Event event) {
-        Assert.assertTrue(event instanceof ContainerExitEvent);
+        assertTrue(event instanceof ContainerExitEvent);
         ContainerExitEvent exitEvent = (ContainerExitEvent) event;
-        Assert.assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
+        assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
             exitEvent.getType());
       }
     };
@@ -688,16 +731,16 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     resources.put(userjar, lpaths);
 
     Path nmp = new Path(testDir);
+    Set<String> nmEnvTrack = new LinkedHashSet<>();
 
     launch.sanitizeEnv(userSetEnv, pwd, appDirs, userLocalDirs, containerLogs,
-        resources, nmp, Collections.emptySet());
+        resources, nmp, nmEnvTrack);
 
     List<String> result =
       getJarManifestClasspath(userSetEnv.get(Environment.CLASSPATH.name()));
 
-    Assert.assertTrue(result.size() > 1);
-    Assert.assertTrue(
-      result.get(result.size() - 1).endsWith("userjarlink.jar"));
+    assertTrue(result.size() > 1);
+    assertTrue(result.get(result.size() - 1).endsWith("userjarlink.jar"));
 
     //Then, with user classpath first
     userSetEnv.put(Environment.CLASSPATH_PREPEND_DISTCACHE.name(), "true");
@@ -709,15 +752,164 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         dispatcher, exec, null, container, dirsHandler, containerManager);
 
     launch.sanitizeEnv(userSetEnv, pwd, appDirs, userLocalDirs, containerLogs,
-        resources, nmp, Collections.emptySet());
+        resources, nmp, nmEnvTrack);
 
     result =
       getJarManifestClasspath(userSetEnv.get(Environment.CLASSPATH.name()));
 
-    Assert.assertTrue(result.size() > 1);
-    Assert.assertTrue(
-      result.get(0).endsWith("userjarlink.jar"));
+    assertTrue(result.size() > 1);
+    assertTrue(result.get(0).endsWith("userjarlink.jar"));
 
+  }
+
+  @Test
+  public void testSanitizeNMEnvVars() throws Exception {
+    // Valid only for unix
+    assumeNotWindows();
+    ContainerLaunchContext containerLaunchContext =
+        recordFactory.newRecordInstance(ContainerLaunchContext.class);
+    ApplicationId appId = ApplicationId.newInstance(0, 0);
+    ApplicationAttemptId appAttemptId =
+        ApplicationAttemptId.newInstance(appId, 1);
+    ContainerId cId = ContainerId.newContainerId(appAttemptId, 0);
+    Map<String, String> userSetEnv = new HashMap<String, String>();
+    Set<String> nmEnvTrack = new LinkedHashSet<>();
+    userSetEnv.put(Environment.CONTAINER_ID.name(), "user_set_container_id");
+    userSetEnv.put(Environment.NM_HOST.name(), "user_set_NM_HOST");
+    userSetEnv.put(Environment.NM_PORT.name(), "user_set_NM_PORT");
+    userSetEnv.put(Environment.NM_HTTP_PORT.name(), "user_set_NM_HTTP_PORT");
+    userSetEnv.put(Environment.LOCAL_DIRS.name(), "user_set_LOCAL_DIR");
+    userSetEnv.put(Environment.USER.key(), "user_set_" +
+        Environment.USER.key());
+    userSetEnv.put(Environment.LOGNAME.name(), "user_set_LOGNAME");
+    userSetEnv.put(Environment.PWD.name(), "user_set_PWD");
+    userSetEnv.put(Environment.HOME.name(), "user_set_HOME");
+    userSetEnv.put(Environment.CLASSPATH.name(), "APATH");
+    // This one should be appended to.
+    String userMallocArenaMaxVal = "test_user_max_val";
+    userSetEnv.put("MALLOC_ARENA_MAX", userMallocArenaMaxVal);
+    containerLaunchContext.setEnvironment(userSetEnv);
+    Container container = mock(Container.class);
+    when(container.getContainerId()).thenReturn(cId);
+    when(container.getLaunchContext()).thenReturn(containerLaunchContext);
+    when(container.getLocalizedResources()).thenReturn(null);
+    Dispatcher dispatcher = mock(Dispatcher.class);
+    EventHandler<Event> eventHandler = new EventHandler<Event>() {
+      public void handle(Event event) {
+        assertTrue(event instanceof ContainerExitEvent);
+        ContainerExitEvent exitEvent = (ContainerExitEvent) event;
+        assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
+            exitEvent.getType());
+      }
+    };
+    when(dispatcher.getEventHandler()).thenReturn(eventHandler);
+
+    // these should eclipse anything in the user environment
+    YarnConfiguration conf = new YarnConfiguration();
+    String mallocArenaMaxVal = "test_nm_max_val";
+    conf.set("yarn.nodemanager.admin-env",
+        "MALLOC_ARENA_MAX=" + mallocArenaMaxVal);
+    String testKey1 = "TEST_KEY1";
+    String testVal1 = "testVal1";
+    conf.set("yarn.nodemanager.admin-env." + testKey1, testVal1);
+    String testKey2 = "TEST_KEY2";
+    String testVal2 = "testVal2";
+    conf.set("yarn.nodemanager.admin-env." + testKey2, testVal2);
+    String testKey3 = "MOUNT_LIST";
+    String testVal3 = "/home/a/b/c,/home/d/e/f,/home/g/e/h";
+    conf.set("yarn.nodemanager.admin-env." + testKey3, testVal3);
+    ContainerLaunch launch = new ContainerLaunch(distContext, conf,
+        dispatcher, exec, null, container, dirsHandler, containerManager);
+    String testDir = System.getProperty("test.build.data",
+        "target/test-dir");
+    Path pwd = new Path(testDir);
+    List<Path> appDirs = new ArrayList<Path>();
+    List<String> userLocalDirs = new ArrayList<>();
+    List<String> containerLogs = new ArrayList<String>();
+    Map<Path, List<String>> resources = new HashMap<Path, List<String>>();
+    Path userjar = new Path("user.jar");
+    List<String> lpaths = new ArrayList<String>();
+    lpaths.add("userjarlink.jar");
+    resources.put(userjar, lpaths);
+    Path nmp = new Path(testDir);
+
+    launch.addConfigsToEnv(userSetEnv);
+    launch.sanitizeEnv(userSetEnv, pwd, appDirs, userLocalDirs, containerLogs,
+        resources, nmp, nmEnvTrack);
+    assertTrue(userSetEnv.containsKey("MALLOC_ARENA_MAX"));
+    assertTrue(userSetEnv.containsKey(testKey1));
+    assertTrue(userSetEnv.containsKey(testKey2));
+    assertTrue(userSetEnv.containsKey(testKey3));
+    assertEquals(userMallocArenaMaxVal + File.pathSeparator
+        + mallocArenaMaxVal, userSetEnv.get("MALLOC_ARENA_MAX"));
+    assertEquals(testVal1, userSetEnv.get(testKey1));
+    assertEquals(testVal2, userSetEnv.get(testKey2));
+    assertEquals(testVal3, userSetEnv.get(testKey3));
+  }
+
+  @Test
+  public void testNmForcePath() throws Exception {
+    // Valid only for unix
+    assumeNotWindows();
+    ContainerLaunchContext containerLaunchContext =
+        recordFactory.newRecordInstance(ContainerLaunchContext.class);
+    ApplicationId appId = ApplicationId.newInstance(0, 0);
+    ApplicationAttemptId appAttemptId =
+        ApplicationAttemptId.newInstance(appId, 1);
+    ContainerId cId = ContainerId.newContainerId(appAttemptId, 0);
+    Map<String, String> userSetEnv = new HashMap<>();
+    Set<String> nmEnvTrack = new LinkedHashSet<>();
+    containerLaunchContext.setEnvironment(userSetEnv);
+    Container container = mock(Container.class);
+    when(container.getContainerId()).thenReturn(cId);
+    when(container.getLaunchContext()).thenReturn(containerLaunchContext);
+    when(container.getLocalizedResources()).thenReturn(null);
+    Dispatcher dispatcher = mock(Dispatcher.class);
+    EventHandler<Event> eventHandler = new EventHandler<Event>() {
+      public void handle(Event event) {
+        assertTrue(event instanceof ContainerExitEvent);
+        ContainerExitEvent exitEvent = (ContainerExitEvent) event;
+        assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
+            exitEvent.getType());
+      }
+    };
+    when(dispatcher.getEventHandler()).thenReturn(eventHandler);
+
+    String testDir = System.getProperty("test.build.data",
+        "target/test-dir");
+    Path pwd = new Path(testDir);
+    List<Path> appDirs = new ArrayList<>();
+    List<String> userLocalDirs = new ArrayList<>();
+    List<String> containerLogs = new ArrayList<>();
+    Map<Path, List<String>> resources = new HashMap<>();
+    Path nmp = new Path(testDir);
+
+    YarnConfiguration conf = new YarnConfiguration();
+    String forcePath = "./force-path";
+    conf.set("yarn.nodemanager.force.path", forcePath);
+
+    ContainerLaunch launch = new ContainerLaunch(distContext, conf,
+        dispatcher, exec, null, container, dirsHandler, containerManager);
+    launch.addConfigsToEnv(userSetEnv);
+    launch.sanitizeEnv(userSetEnv, pwd, appDirs, userLocalDirs, containerLogs,
+        resources, nmp, nmEnvTrack);
+
+    assertTrue(userSetEnv.containsKey(Environment.PATH.name()));
+    assertEquals(forcePath + ":$PATH",
+        userSetEnv.get(Environment.PATH.name()));
+
+    String userPath = "/usr/bin:/usr/local/bin";
+    userSetEnv.put(Environment.PATH.name(), userPath);
+    containerLaunchContext.setEnvironment(userSetEnv);
+    when(container.getLaunchContext()).thenReturn(containerLaunchContext);
+
+    launch.addConfigsToEnv(userSetEnv);
+    launch.sanitizeEnv(userSetEnv, pwd, appDirs, userLocalDirs, containerLogs,
+        resources, nmp, nmEnvTrack);
+
+    assertTrue(userSetEnv.containsKey(Environment.PATH.name()));
+    assertEquals(forcePath + ":" + userPath,
+        userSetEnv.get(Environment.PATH.name()));
   }
 
   @Test
@@ -762,6 +954,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         .newContainerId(ApplicationAttemptId.newInstance(appId, 1), 1);
     when(container.getContainerId()).thenReturn(containerId);
     when(container.getUser()).thenReturn("test");
+    when(container.localizationCountersAsString()).thenReturn("");
     String relativeContainerLogDir = ContainerLaunch.getRelativeContainerLogDir(
         appId.toString(), containerId.toString());
     Path containerLogDir =
@@ -819,8 +1012,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ContainerLaunch launch = new ContainerLaunch(context, conf, dispatcher,
         exec, app, container, dirsHandler, containerManager);
     launch.call();
-    Assert.assertTrue("ContainerExitEvent should have occurred",
-        eventHandler.isContainerExitEventOccurred());
+    assertTrue(eventHandler.isContainerExitEventOccurred(),
+        "ContainerExitEvent should have occurred");
   }
 
   private static class ContainerExitHandler implements EventHandler<Event> {
@@ -840,22 +1033,19 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       if (event instanceof ContainerExitEvent) {
         containerExitEventOccurred = true;
         ContainerExitEvent exitEvent = (ContainerExitEvent) event;
-        Assert.assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
+        assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
             exitEvent.getType());
         LOG.info("Diagnostic Info : " + exitEvent.getDiagnosticInfo());
         if (testForMultiFile) {
-          Assert.assertTrue("Should contain the Multi file information",
-              exitEvent.getDiagnosticInfo().contains("Error files: "));
+          assertTrue(exitEvent.getDiagnosticInfo().contains("Error files: "),
+              "Should contain the Multi file information");
         }
-        Assert.assertTrue(
-            "Should contain the error Log message with tail size info",
-            exitEvent.getDiagnosticInfo()
-                .contains("Last "
-                    + YarnConfiguration.DEFAULT_NM_CONTAINER_STDERR_BYTES
-                    + " bytes of"));
-        Assert.assertTrue("Should contain contents of error Log",
-            exitEvent.getDiagnosticInfo().contains(
-                INVALID_JAVA_HOME + "/bin/java"));
+        assertTrue(exitEvent.getDiagnosticInfo().contains("Last "
+            + YarnConfiguration.DEFAULT_NM_CONTAINER_STDERR_BYTES
+            + " bytes of"), "Should contain the error Log message with tail size info");
+        assertTrue(exitEvent.getDiagnosticInfo()
+            .contains(INVALID_JAVA_HOME + "/bin/java"),
+            "Should contain contents of error Log");
       }
     }
   }
@@ -878,7 +1068,9 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
    * See if environment variable is forwarded using sanitizeEnv.
    * @throws Exception
    */
-  @Test (timeout = 60000)
+  @Test
+  @Timeout(value = 60)
+  @SuppressWarnings("checkstyle:methodlength")
   public void testContainerEnvVariables() throws Exception {
     containerManager.start();
 
@@ -1032,14 +1224,14 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     }
     BufferedReader reader =
         new BufferedReader(new FileReader(processFinalFile));
-    Assert.assertEquals(cId.toString(), reader.readLine());
-    Assert.assertEquals(context.getNodeId().getHost(), reader.readLine());
-    Assert.assertEquals(String.valueOf(context.getNodeId().getPort()),
+    assertEquals(cId.toString(), reader.readLine());
+    assertEquals(context.getNodeId().getHost(), reader.readLine());
+    assertEquals(String.valueOf(context.getNodeId().getPort()),
       reader.readLine());
-    Assert.assertEquals(String.valueOf(HTTP_PORT), reader.readLine());
-    Assert.assertEquals(StringUtils.join(",", appDirs), reader.readLine());
-    Assert.assertEquals(user, reader.readLine());
-    Assert.assertEquals(user, reader.readLine());
+    assertEquals(String.valueOf(HTTP_PORT), reader.readLine());
+    assertEquals(StringUtils.join(",", appDirs), reader.readLine());
+    assertEquals(user, reader.readLine());
+    assertEquals(user, reader.readLine());
     String obtainedPWD = reader.readLine();
     boolean found = false;
     for (Path localDir : appDirs) {
@@ -1048,34 +1240,34 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         break;
       }
     }
-    Assert.assertTrue("Wrong local-dir found : " + obtainedPWD, found);
-    Assert.assertEquals(
+    assertTrue(found, "Wrong local-dir found : " + obtainedPWD);
+    assertEquals(
         conf.get(
               YarnConfiguration.NM_USER_HOME_DIR, 
               YarnConfiguration.DEFAULT_NM_USER_HOME_DIR),
         reader.readLine());
-    Assert.assertEquals(userConfDir, reader.readLine());
+    assertEquals(userConfDir, reader.readLine());
     for (String serviceName : containerManager.getAuxServiceMetaData().keySet()) {
-      Assert.assertEquals(
+      assertEquals(
           containerManager.getAuxServiceMetaData().get(serviceName),
           ByteBuffer.wrap(Base64.decodeBase64(reader.readLine().getBytes())));
     }
 
-    Assert.assertEquals(cId.toString(), containerLaunchContext
+    assertEquals(cId.toString(), containerLaunchContext
         .getEnvironment().get(Environment.CONTAINER_ID.name()));
-    Assert.assertEquals(context.getNodeId().getHost(), containerLaunchContext
+    assertEquals(context.getNodeId().getHost(), containerLaunchContext
       .getEnvironment().get(Environment.NM_HOST.name()));
-    Assert.assertEquals(String.valueOf(context.getNodeId().getPort()),
+    assertEquals(String.valueOf(context.getNodeId().getPort()),
       containerLaunchContext.getEnvironment().get(Environment.NM_PORT.name()));
-    Assert.assertEquals(String.valueOf(HTTP_PORT), containerLaunchContext
+    assertEquals(String.valueOf(HTTP_PORT), containerLaunchContext
       .getEnvironment().get(Environment.NM_HTTP_PORT.name()));
-    Assert.assertEquals(StringUtils.join(",", appDirs), containerLaunchContext
+    assertEquals(StringUtils.join(",", appDirs), containerLaunchContext
         .getEnvironment().get(Environment.LOCAL_DIRS.name()));
-    Assert.assertEquals(StringUtils.join(",", containerLogDirs),
+    assertEquals(StringUtils.join(",", containerLogDirs),
       containerLaunchContext.getEnvironment().get(Environment.LOG_DIRS.name()));
-    Assert.assertEquals(user, containerLaunchContext.getEnvironment()
+    assertEquals(user, containerLaunchContext.getEnvironment()
     	.get(Environment.USER.name()));
-    Assert.assertEquals(user, containerLaunchContext.getEnvironment()
+    assertEquals(user, containerLaunchContext.getEnvironment()
     	.get(Environment.LOGNAME.name()));
     found = false;
     obtainedPWD =
@@ -1086,29 +1278,29 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         break;
       }
     }
-    Assert.assertTrue("Wrong local-dir found : " + obtainedPWD, found);
-    Assert.assertEquals(
+    assertTrue(found, "Wrong local-dir found : " + obtainedPWD);
+    assertEquals(
         conf.get(
     	        YarnConfiguration.NM_USER_HOME_DIR, 
     	        YarnConfiguration.DEFAULT_NM_USER_HOME_DIR),
     	containerLaunchContext.getEnvironment()
     		.get(Environment.HOME.name()));
-    Assert.assertEquals(userConfDir, containerLaunchContext.getEnvironment()
+    assertEquals(userConfDir, containerLaunchContext.getEnvironment()
         .get(Environment.HADOOP_CONF_DIR.name()));
 
     // Get the pid of the process
     String pid = reader.readLine().trim();
     // No more lines
-    Assert.assertEquals(null, reader.readLine());
+    assertEquals(null, reader.readLine());
 
     // Now test the stop functionality.
 
     // Assert that the process is alive
-    Assert.assertTrue("Process is not alive!",
-      DefaultContainerExecutor.containerIsAlive(pid));
+    assertTrue(DefaultContainerExecutor.containerIsAlive(pid),
+        "Process is not alive!");
     // Once more
-    Assert.assertTrue("Process is not alive!",
-      DefaultContainerExecutor.containerIsAlive(pid));
+    assertTrue(DefaultContainerExecutor.containerIsAlive(pid),
+        "Process is not alive!");
 
     // Now test the stop functionality.
     List<ContainerId> containerIds = new ArrayList<ContainerId>();
@@ -1125,20 +1317,20 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ContainerStatus containerStatus = 
         containerManager.getContainerStatuses(gcsRequest).getContainerStatuses().get(0);
     int expectedExitCode = ContainerExitStatus.KILLED_BY_APPMASTER;
-    Assert.assertEquals(expectedExitCode, containerStatus.getExitStatus());
+    assertEquals(expectedExitCode, containerStatus.getExitStatus());
 
     // Assert that the process is not alive anymore
-    Assert.assertFalse("Process is still alive!",
-      DefaultContainerExecutor.containerIsAlive(pid));
+    assertFalse(DefaultContainerExecutor.containerIsAlive(pid), "Process is still alive!");
   }
 
-  @Test (timeout = 5000)
+  @Test
+  @Timeout(value = 5)
   public void testAuxiliaryServiceHelper() throws Exception {
     Map<String, String> env = new HashMap<String, String>();
     String serviceName = "testAuxiliaryService";
     ByteBuffer bb = ByteBuffer.wrap("testAuxiliaryService".getBytes());
     AuxiliaryServiceHelper.setServiceDataIntoEnv(serviceName, bb, env);
-    Assert.assertEquals(bb,
+    assertEquals(bb,
         AuxiliaryServiceHelper.getServiceDataFromEnv(serviceName, env));
   }
 
@@ -1217,13 +1409,12 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       Thread.sleep(1000);
       LOG.info("Waiting for process start-file to be created");
     }
-    Assert.assertTrue("ProcessStartFile doesn't exist!",
-        processStartFile.exists());
+    assertTrue(processStartFile.exists(), "ProcessStartFile doesn't exist!");
 
     NMContainerStatus nmContainerStatus =
         containerManager.getContext().getContainers().get(cId)
           .getNMContainerStatus();
-    Assert.assertEquals(priority, nmContainerStatus.getPriority());
+    assertEquals(priority, nmContainerStatus.getPriority());
 
     // Now test the stop functionality.
     List<ContainerId> containerIds = new ArrayList<ContainerId>();
@@ -1243,7 +1434,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ContainerStatus containerStatus = 
         containerManager.getContainerStatuses(gcsRequest)
           .getContainerStatuses().get(0);
-    Assert.assertEquals(ContainerExitStatus.KILLED_BY_APPMASTER,
+    assertEquals(ContainerExitStatus.KILLED_BY_APPMASTER,
         containerStatus.getExitStatus());
 
     // Now verify the contents of the file.  Script generates a message when it
@@ -1252,8 +1443,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     // There is no way for the process to trap and respond.  Instead, we can
     // verify that the job object with ID matching container ID no longer exists.
     if (Shell.WINDOWS || !delayed) {
-      Assert.assertFalse("Process is still alive!",
-        DefaultContainerExecutor.containerIsAlive(cId.toString()));
+      assertFalse(DefaultContainerExecutor.containerIsAlive(cId.toString()),
+          "Process is still alive!");
     } else {
       BufferedReader reader =
           new BufferedReader(new FileReader(processStartFile));
@@ -1269,23 +1460,26 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
           break;
         }
       }
-      Assert.assertTrue("Did not find sigterm message", foundSigTermMessage);
+      assertTrue(foundSigTermMessage, "Did not find sigterm message");
       reader.close();
     }
   }
 
-  @Test (timeout = 30000)
+  @Test
+  @Timeout(value = 30)
   public void testDelayedKill() throws Exception {
     internalKillTest(true);
   }
 
-  @Test (timeout = 30000)
+  @Test
+  @Timeout(value = 30)
   public void testImmediateKill() throws Exception {
     internalKillTest(false);
   }
 
   @SuppressWarnings("rawtypes")
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testCallFailureWithNullLocalizedResources() {
     Container container = mock(Container.class);
     when(container.getContainerId()).thenReturn(ContainerId.newContainerId(
@@ -1299,9 +1493,9 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     EventHandler<Event> eventHandler = new EventHandler<Event>() {
       @Override
       public void handle(Event event) {
-        Assert.assertTrue(event instanceof ContainerExitEvent);
+        assertTrue(event instanceof ContainerExitEvent);
         ContainerExitEvent exitEvent = (ContainerExitEvent) event;
-        Assert.assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
+        assertEquals(ContainerEventType.CONTAINER_EXITED_WITH_FAILURE,
             exitEvent.getType());
       }
     };
@@ -1313,7 +1507,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
 
   protected Token createContainerToken(ContainerId cId, Priority priority,
       long createTime) throws InvalidToken {
-    Resource r = BuilderUtils.newResource(1024, 1);
+    Resource r = Resources.createResource(1024);
     ContainerTokenIdentifier containerTokenIdentifier =
         new ContainerTokenIdentifier(cId, context.getNodeId().toString(), user,
           r, System.currentTimeMillis() + 10000L, 123, DUMMY_RM_IDENTIFIER,
@@ -1330,7 +1524,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
    * Test that script exists with non-zero exit code when command fails.
    * @throws IOException
    */
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testShellScriptBuilderNonZeroExitCode() throws IOException {
     ShellScriptBuilder builder = ShellScriptBuilder.create();
     builder.command(Arrays.asList(new String[] {"unknownCommand"}));
@@ -1359,7 +1554,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
 
   private static final String expectedMessage = "The command line has a length of";
   
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testWindowsShellScriptBuilderCommand() throws IOException {
     String callCmd = "@call ";
     
@@ -1373,43 +1569,44 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
 
     // Basic tests: less length, exact length, max+1 length 
     builder.command(Arrays.asList(
-        org.apache.commons.lang.StringUtils.repeat("A", 1024)));
+        org.apache.commons.lang3.StringUtils.repeat("A", 1024)));
     builder.command(Arrays.asList(
-        org.apache.commons.lang.StringUtils.repeat(
+        org.apache.commons.lang3.StringUtils.repeat(
             "E", Shell.WINDOWS_MAX_SHELL_LENGTH - callCmd.length())));
     try {
       builder.command(Arrays.asList(
-          org.apache.commons.lang.StringUtils.repeat(
+          org.apache.commons.lang3.StringUtils.repeat(
               "X", Shell.WINDOWS_MAX_SHELL_LENGTH -callCmd.length() + 1)));
       fail("longCommand was expected to throw");
     } catch(IOException e) {
-      assertThat(e.getMessage(), CoreMatchers.containsString(expectedMessage));
+      assertThat(e).hasMessageContaining(expectedMessage);
     }
 
     // Composite tests, from parts: less, exact and +
     builder.command(Arrays.asList(
-        org.apache.commons.lang.StringUtils.repeat("A", 1024),
-        org.apache.commons.lang.StringUtils.repeat("A", 1024),
-        org.apache.commons.lang.StringUtils.repeat("A", 1024)));
+        org.apache.commons.lang3.StringUtils.repeat("A", 1024),
+        org.apache.commons.lang3.StringUtils.repeat("A", 1024),
+        org.apache.commons.lang3.StringUtils.repeat("A", 1024)));
 
     // buildr.command joins the command parts with an extra space
     builder.command(Arrays.asList(
-        org.apache.commons.lang.StringUtils.repeat("E", 4095),
-        org.apache.commons.lang.StringUtils.repeat("E", 2047),
-        org.apache.commons.lang.StringUtils.repeat("E", 2047 - callCmd.length())));
+        org.apache.commons.lang3.StringUtils.repeat("E", 4095),
+        org.apache.commons.lang3.StringUtils.repeat("E", 2047),
+        org.apache.commons.lang3.StringUtils.repeat("E", 2047 - callCmd.length())));
 
     try {
       builder.command(Arrays.asList(
-          org.apache.commons.lang.StringUtils.repeat("X", 4095), 
-          org.apache.commons.lang.StringUtils.repeat("X", 2047),
-          org.apache.commons.lang.StringUtils.repeat("X", 2048 - callCmd.length())));
+          org.apache.commons.lang3.StringUtils.repeat("X", 4095),
+          org.apache.commons.lang3.StringUtils.repeat("X", 2047),
+          org.apache.commons.lang3.StringUtils.repeat("X", 2048 - callCmd.length())));
       fail("long commands was expected to throw");
     } catch(IOException e) {
-      assertThat(e.getMessage(), CoreMatchers.containsString(expectedMessage));
+      assertThat(e).hasMessageContaining(expectedMessage);
     }
   }
   
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testWindowsShellScriptBuilderEnv() throws IOException {
     // Test is only relevant on Windows
     assumeWindows();
@@ -1420,19 +1617,20 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ShellScriptBuilder builder = ShellScriptBuilder.create();
 
     // test env
-    builder.env("somekey", org.apache.commons.lang.StringUtils.repeat("A", 1024));
-    builder.env("somekey", org.apache.commons.lang.StringUtils.repeat(
+    builder.env("somekey", org.apache.commons.lang3.StringUtils.repeat("A", 1024));
+    builder.env("somekey", org.apache.commons.lang3.StringUtils.repeat(
         "A", Shell.WINDOWS_MAX_SHELL_LENGTH - ("@set somekey=").length()));
     try {
-      builder.env("somekey", org.apache.commons.lang.StringUtils.repeat(
+      builder.env("somekey", org.apache.commons.lang3.StringUtils.repeat(
           "A", Shell.WINDOWS_MAX_SHELL_LENGTH - ("@set somekey=").length()) + 1);
       fail("long env was expected to throw");
     } catch(IOException e) {
-      assertThat(e.getMessage(), CoreMatchers.containsString(expectedMessage));
+      assertThat(e).hasMessageContaining(expectedMessage);
     }
   }
     
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testWindowsShellScriptBuilderMkdir() throws IOException {
     String mkDirCmd = "@if not exist \"\" mkdir \"\"";
 
@@ -1445,19 +1643,20 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ShellScriptBuilder builder = ShellScriptBuilder.create();
 
     // test mkdir
-    builder.mkdir(new Path(org.apache.commons.lang.StringUtils.repeat("A", 1024)));
-    builder.mkdir(new Path(org.apache.commons.lang.StringUtils.repeat("E",
+    builder.mkdir(new Path(org.apache.commons.lang3.StringUtils.repeat("A", 1024)));
+    builder.mkdir(new Path(org.apache.commons.lang3.StringUtils.repeat("E",
         (Shell.WINDOWS_MAX_SHELL_LENGTH - mkDirCmd.length()) / 2)));
     try {
-      builder.mkdir(new Path(org.apache.commons.lang.StringUtils.repeat(
+      builder.mkdir(new Path(org.apache.commons.lang3.StringUtils.repeat(
           "X", (Shell.WINDOWS_MAX_SHELL_LENGTH - mkDirCmd.length())/2 +1)));
       fail("long mkdir was expected to throw");
     } catch(IOException e) {
-      assertThat(e.getMessage(), CoreMatchers.containsString(expectedMessage));
-    }    
+      assertThat(e).hasMessageContaining(expectedMessage);
+    }
   }
 
-  @Test (timeout = 10000)
+  @Test
+  @Timeout(value = 10)
   public void testWindowsShellScriptBuilderLink() throws IOException {
     // Test is only relevant on Windows
     assumeWindows();
@@ -1469,28 +1668,28 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ShellScriptBuilder builder = ShellScriptBuilder.create();
 
     // test link
-    builder.link(new Path(org.apache.commons.lang.StringUtils.repeat("A", 1024)),
-        new Path(org.apache.commons.lang.StringUtils.repeat("B", 1024)));
+    builder.link(new Path(org.apache.commons.lang3.StringUtils.repeat("A", 1024)),
+        new Path(org.apache.commons.lang3.StringUtils.repeat("B", 1024)));
     builder.link(
-        new Path(org.apache.commons.lang.StringUtils.repeat(
+        new Path(org.apache.commons.lang3.StringUtils.repeat(
             "E", (Shell.WINDOWS_MAX_SHELL_LENGTH - linkCmd.length())/2)),
-        new Path(org.apache.commons.lang.StringUtils.repeat(
+        new Path(org.apache.commons.lang3.StringUtils.repeat(
             "F", (Shell.WINDOWS_MAX_SHELL_LENGTH - linkCmd.length())/2)));
     try {
       builder.link(
-          new Path(org.apache.commons.lang.StringUtils.repeat(
+          new Path(org.apache.commons.lang3.StringUtils.repeat(
               "X", (Shell.WINDOWS_MAX_SHELL_LENGTH - linkCmd.length())/2 + 1)),
-          new Path(org.apache.commons.lang.StringUtils.repeat(
+          new Path(org.apache.commons.lang3.StringUtils.repeat(
               "Y", (Shell.WINDOWS_MAX_SHELL_LENGTH - linkCmd.length())/2) + 1));
       fail("long link was expected to throw");
     } catch(IOException e) {
-      assertThat(e.getMessage(), CoreMatchers.containsString(expectedMessage));
+      assertThat(e).hasMessageContaining(expectedMessage);
     }
   }
 
   @Test
   public void testKillProcessGroup() throws Exception {
-    Assume.assumeTrue(Shell.isSetsidAvailable);
+    assumeTrue(Shell.isSetsidAvailable);
     containerManager.start();
 
     // Construct the Container-id
@@ -1557,15 +1756,15 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       Thread.sleep(1000);
       LOG.info("Waiting for process start-file to be created");
     }
-    Assert.assertTrue("ProcessStartFile doesn't exist!",
-        processStartFile.exists());
+    assertTrue(processStartFile.exists(),
+        "ProcessStartFile doesn't exist!");
 
     BufferedReader reader =
           new BufferedReader(new FileReader(processStartFile));
     // Get the pid of the process
     String pid = reader.readLine().trim();
     // No more lines
-    Assert.assertEquals(null, reader.readLine());
+    assertEquals(null, reader.readLine());
     reader.close();
 
     reader =
@@ -1573,7 +1772,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     // Get the pid of the child process
     String child = reader.readLine().trim();
     // No more lines
-    Assert.assertEquals(null, reader.readLine());
+    assertEquals(null, reader.readLine());
     reader.close();
 
     LOG.info("Manually killing pid " + pid + ", but not child pid " + child);
@@ -1582,8 +1781,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     BaseContainerManagerTest.waitForContainerState(containerManager, cId,
         ContainerState.COMPLETE);
 
-    Assert.assertFalse("Process is still alive!",
-        DefaultContainerExecutor.containerIsAlive(pid));
+    assertFalse(DefaultContainerExecutor.containerIsAlive(pid),
+        "Process is still alive!");
 
     List<ContainerId> containerIds = new ArrayList<ContainerId>();
     containerIds.add(cId);
@@ -1594,7 +1793,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     ContainerStatus containerStatus =
         containerManager.getContainerStatuses(gcsRequest)
             .getContainerStatuses().get(0);
-    Assert.assertEquals(ExitCode.FORCE_KILLED.getExitCode(),
+    assertEquals(ExitCode.FORCE_KILLED.getExitCode(),
         containerStatus.getExitStatus());
   }
 
@@ -1645,22 +1844,75 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
           new String[] { tempFile.getAbsolutePath() }, tmpDir);
 
         shexc.execute();
-        assertEquals(shexc.getExitCode(), 0);
+        assertThat(shexc.getExitCode()).isEqualTo(0);
         File directorInfo =
           new File(localLogDir, ContainerExecutor.DIRECTORY_CONTENTS);
         File scriptCopy = new File(localLogDir, tempFile.getName());
 
-        Assert.assertEquals("Directory info file missing", debugLogsExist,
-          directorInfo.exists());
-        Assert.assertEquals("Copy of launch script missing", debugLogsExist,
-          scriptCopy.exists());
+        assertEquals(debugLogsExist, directorInfo.exists(), "Directory info file missing");
+        assertEquals(debugLogsExist,
+            scriptCopy.exists(), "Copy of launch script missing");
         if (debugLogsExist) {
-          Assert.assertTrue("Directory info file size is 0",
-            directorInfo.length() > 0);
-          Assert.assertTrue("Size of copy of launch script is 0",
-            scriptCopy.length() > 0);
+          assertTrue(directorInfo.length() > 0, "Directory info file size is 0");
+          assertTrue(scriptCopy.length() > 0,
+              "Size of copy of launch script is 0");
         }
       }
+    } finally {
+      // cleanup
+      if (shellFile != null && shellFile.exists()) {
+        shellFile.delete();
+      }
+      if (tempFile != null && tempFile.exists()) {
+        tempFile.delete();
+      }
+    }
+  }
+
+  @Test
+  public void testDebuggingInformationOnError() throws IOException {
+    File shellFile = null;
+    File tempFile = null;
+    Configuration conf = new YarnConfiguration();
+    try {
+      shellFile = Shell.appendScriptExtension(tmpDir, "hello");
+      tempFile = Shell.appendScriptExtension(tmpDir, "temp");
+      String testCommand = Shell.WINDOWS ? "@echo \"hello\"" : "echo \"hello\"";
+      PrintWriter writer = new PrintWriter(new FileOutputStream(shellFile));
+      FileUtil.setExecutable(shellFile, true);
+      writer.println(testCommand);
+      writer.close();
+      Map<Path, List<String>> resources = new HashMap<>();
+      Map<String, String> env = new HashMap<>();
+      List<String> commands = new ArrayList<>();
+      if (Shell.WINDOWS) {
+        commands.add("cmd");
+        commands.add("/c");
+        commands.add("\"" + shellFile.getAbsolutePath() + "\"");
+      } else {
+        commands.add("/bin/sh \\\"" + shellFile.getAbsolutePath() + "\\\"");
+      }
+      conf.setBoolean(YarnConfiguration.NM_LOG_CONTAINER_DEBUG_INFO, false);
+      conf.setBoolean(YarnConfiguration.NM_LOG_CONTAINER_DEBUG_INFO_ON_ERROR, true);
+      FileOutputStream fos = new FileOutputStream(tempFile);
+      ContainerExecutor exec = new DefaultContainerExecutor();
+      exec.setConf(conf);
+      LinkedHashSet<String> nmVars = new LinkedHashSet<>();
+      exec.writeLaunchEnv(fos, env, resources, commands,
+          new Path(localLogDir.getAbsolutePath()), "user",
+          tempFile.getName(), nmVars);
+      fos.flush();
+      fos.close();
+      FileUtil.setExecutable(tempFile, true);
+      Shell.ShellCommandExecutor shexc = new Shell.ShellCommandExecutor(
+          new String[]{tempFile.getAbsolutePath()}, tmpDir);
+      shexc.execute();
+      assertThat(shexc.getExitCode()).isZero();
+      File directorInfo =
+          new File(localLogDir, ContainerExecutor.DIRECTORY_CONTENTS);
+      File scriptCopy = new File(localLogDir, tempFile.getName());
+      assertFalse(directorInfo.exists(), "Directory info file missing");
+      assertFalse(scriptCopy.exists(), "Copy of launch script missing");
     } finally {
       // cleanup
       if (shellFile != null && shellFile.exists()) {
@@ -1690,6 +1942,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     when(id.toString()).thenReturn("1");
     when(container.getContainerId()).thenReturn(id);
     when(container.getUser()).thenReturn("user");
+    when(container.localizationCountersAsString()).thenReturn("1,2,3,4,5");
     ContainerLaunchContext clc = mock(ContainerLaunchContext.class);
     when(clc.getCommands()).thenReturn(Lists.newArrayList());
     when(container.getLaunchContext()).thenReturn(clc);
@@ -1762,17 +2015,17 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         // expected
         System.out.println("Received an expected exception: " + e.getMessage());
 
-        Assert.assertEquals(true, stdout.exists());
+        assertEquals(true, stdout.exists());
         BufferedReader stdoutReader = new BufferedReader(new FileReader(stdout));
         // Get the pid of the process
         String line = stdoutReader.readLine().trim();
-        Assert.assertEquals(TEST_STDOUT_ECHO, line);
+        assertEquals(TEST_STDOUT_ECHO, line);
         // No more lines
-        Assert.assertEquals(null, stdoutReader.readLine());
+        assertEquals(null, stdoutReader.readLine());
         stdoutReader.close();
 
-        Assert.assertEquals(true, stderr.exists());
-        Assert.assertTrue(stderr.length() > 0);
+        assertEquals(true, stderr.exists());
+        assertTrue(stderr.length() > 0);
       }
     }
     finally {
@@ -1818,8 +2071,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         // expected
         System.out.println("Received an expected exception: " + e.getMessage());
 
-        Assert.assertEquals(false, stdout.exists());
-        Assert.assertEquals(false, stderr.exists());
+        assertEquals(false, stdout.exists());
+        assertEquals(false, stderr.exists());
       }
     } finally {
       FileUtil.fullyDelete(shellFile);
@@ -1832,7 +2085,11 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
   public void testInvalidEnvVariableSubstitutionType1() throws IOException {
     Map<String, String> env = new HashMap<String, String>();
     // invalid env
-    env.put("testVar", "version${foo.version}");
+    String invalidEnv = "version${foo.version}";
+    if (Shell.WINDOWS) {
+      invalidEnv = "version%foo%<>^&|=:version%";
+    }
+    env.put("testVar", invalidEnv);
     validateShellExecutorForDifferentEnvs(env);
   }
 
@@ -1843,7 +2100,11 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
   public void testInvalidEnvVariableSubstitutionType2() throws IOException {
     Map<String, String> env = new HashMap<String, String>();
     // invalid env
-    env.put("testPath", "/abc:/${foo.path}:/$bar");
+    String invalidEnv = "/abc:/${foo.path}:/$bar";
+    if (Shell.WINDOWS) {
+      invalidEnv = "/abc:/%foo%<>^&|=:path%:/%bar%";
+    }
+    env.put("testPath", invalidEnv);
     validateShellExecutorForDifferentEnvs(env);
   }
 
@@ -1872,9 +2133,9 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
           new String[] { shellFile.getAbsolutePath() }, tmpDir, cmdEnv);
       try {
         shexc.execute();
-        Assert.fail("Should catch exception");
+        fail("Should catch exception");
       } catch (ExitCodeException e) {
-        Assert.assertTrue(shexc.getExitCode() != 0);
+        assertTrue(shexc.getExitCode() != 0);
       }
     } finally {
       // cleanup
@@ -1920,9 +2181,9 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       try {
         shexc.execute();
       } catch(ExitCodeException e){
-        Assert.fail("Should not catch exception");
+        fail("Should not catch exception");
       }
-      Assert.assertTrue(shexc.getExitCode() == 0);
+      assertTrue(shexc.getExitCode() == 0);
     }
     finally {
       // cleanup
@@ -1941,32 +2202,28 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     copy.putAll(env);
     Map<String, String> ordered = sb.orderEnvByDependencies(env);
     // 1st, check that env and copy are the same
-    Assert.assertEquals(
-        "Input env map has been altered because its size changed",
-        copy.size(), env.size()
-    );
+    assertEquals(copy.size(), env.size(),
+        "Input env map has been altered because its size changed");
     final Iterator<Map.Entry<String, String>> ai = env.entrySet().iterator();
     for (Map.Entry<String, String> e : copy.entrySet()) {
       Map.Entry<String, String> a = ai.next();
-      Assert.assertTrue(
-          "Keys have been reordered in input env map",
+      assertTrue(
           // env must not be altered at all, so we don't use String.equals
           // copy and env must use the same String refs
-          e.getKey() == a.getKey()
+          e.getKey() == a.getKey(), "Keys have been reordered in input env map"
       );
-      Assert.assertTrue(
-          "Key "+e.getKey()+" does not longer points to its "
-              +"original value have been reordered in input env map",
+      assertTrue(
           // env must be altered at all, so we don't use String.equals
           // copy and env must use the same String refs
-          e.getValue() == a.getValue()
+          e.getValue() == a.getValue(), "Key "+e.getKey()+" does not longer points to its "
+          +"original value have been reordered in input env map"
       );
     }
     // 2nd, check the ordered version as the expected ordering
     // and did not altered values
-    Assert.assertEquals(
+    assertEquals(env.size(), ordered.size(),
         "Input env map and ordered env map must have the same size, env="+env+
-            ", ordered="+ordered, env.size(), ordered.size()
+        ", ordered="+ordered
     );
     int iA = -1;
     int iB = -1;
@@ -1992,7 +2249,7 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       } else if ("cyclic_C".equals(e.getKey())) {
         icC = i++;
       } else {
-        Assert.fail("Test need to ne fixed, got an unexpected env entry "+
+        fail("Test need to ne fixed, got an unexpected env entry "+
             e.getKey());
       }
     }
@@ -2000,170 +2257,31 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     // B depends on A, C depends on B so there are assertion on B>A and C>B
     // but there is no assertion about C>A because B might be missing in some
     // broken envs
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", B should be after A", iA<0 || iB<0 || iA<iB);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", C should be after B", iB<0 || iC<0 || iB<iC);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", D should be after A", iA<0 || iD<0 || iA<iD);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", D should be after B", iB<0 || iD<0 || iB<iD);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_A should be after C", iC<0 || icA<0 || icB<0 || icC<0 ||
-        iC<icA);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_B should be after C", iC<0 || icB<0 || icC<0 ||
-        iC<icB);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_C should be after C", iC<0 || icC<0 || iC<icC);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_A should be after cyclic_B if no cyclic_C", icC>=0 ||
-        icA<0 || icB<0 || icB<icA);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_B should be after cyclic_C if no cyclic_A", icA>=0 ||
-        icB<0 || icC<0 || icC<icB);
-    Assert.assertTrue("when reordering "+env+" into "+ordered+
-        ", cyclic_C should be after cyclic_A if no cyclic_B", icA>=0 ||
-        icC<0 || icA<0 || icA<icC);
-  }
-
-  @Test(timeout = 1000)
-  public void testGetEnvDependencies() {
-    final Set<String> expected = new HashSet<>();
-    final ContainerLaunch.ShellScriptBuilder bash =
-        ContainerLaunch.ShellScriptBuilder.create(Shell.OSType.OS_TYPE_LINUX);
-    String s;
-
-    s = null;
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "A";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "\\$A";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "$$";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "$1";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "handle \"'$A'\" simple quotes";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "$ crash test for StringArrayOutOfBoundException";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${ crash test for StringArrayOutOfBoundException";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${# crash test for StringArrayOutOfBoundException";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "crash test for StringArrayOutOfBoundException $";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "crash test for StringArrayOutOfBoundException ${";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "crash test for StringArrayOutOfBoundException ${#";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-
-    expected.add("A");
-    s = "$A";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${A}";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${#A[*]}";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "in the $A midlle";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-
-    expected.add("B");
-    s = "${A:-$B} var in var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${A}$B var outside var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-
-    expected.add("C");
-    s = "$A:$B:$C:pathlist var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-    s = "${A}/foo/bar:$B:${C}:pathlist var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        bash.getEnvDependencies(s));
-
-    ContainerLaunch.ShellScriptBuilder win =
-        ContainerLaunch.ShellScriptBuilder.create(Shell.OSType.OS_TYPE_WIN);
-    expected.clear();
-    s = null;
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "A";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%%%%%%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%%A%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A:";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-
-    expected.add("A");
-    s = "%A%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%%%A%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%%C%A%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A:~-1%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A%B%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A%%%%%B%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-
-    expected.add("B");
-    s = "%A%%B%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A%%%%B%";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-
-    expected.add("C");
-    s = "%A%:%B%:%C%:pathlist var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
-    s = "%A%\\foo\\bar:%B%:%C%:pathlist var";
-    Assert.assertEquals("failed to parse " + s, expected,
-        win.getEnvDependencies(s));
+    assertTrue(iA<0 || iB<0 || iA<iB, "when reordering "+env+" into "+ordered+
+        ", B should be after A");
+    assertTrue(iB<0 || iC<0 || iB<iC, "when reordering "+env+" into "+ordered+
+        ", C should be after B");
+    assertTrue(iA<0 || iD<0 || iA<iD, "when reordering "+env+" into "+ordered+
+        ", D should be after A");
+    assertTrue(iB<0 || iD<0 || iB<iD, "when reordering "+env+" into "+ordered+
+        ", D should be after B");
+    assertTrue(iC<0 || icA<0 || icB<0 || icC<0 ||
+        iC<icA, "when reordering "+env+" into "+ordered+
+        ", cyclic_A should be after C");
+    assertTrue(iC<0 || icB<0 || icC<0 ||
+        iC<icB, "when reordering "+env+" into "+ordered+
+        ", cyclic_B should be after C");
+    assertTrue(iC<0 || icC<0 || iC<icC, "when reordering "+env+" into "+ordered+
+        ", cyclic_C should be after C");
+    assertTrue(icC>=0 ||
+        icA<0 || icB<0 || icB<icA, "when reordering "+env+" into "+ordered+
+        ", cyclic_A should be after cyclic_B if no cyclic_C");
+    assertTrue(icA>=0 ||
+        icB<0 || icC<0 || icC<icB, "when reordering "+env+" into "+ordered+
+        ", cyclic_B should be after cyclic_C if no cyclic_A");
+    assertTrue(icA>=0 ||
+        icC<0 || icA<0 || icA<icC, "when reordering "+env+" into "+ordered+
+        ", cyclic_C should be after cyclic_A if no cyclic_B");
   }
 
   private Set<String> asSet(String...str) {
@@ -2172,7 +2290,8 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
     return set;
   }
 
-  @Test(timeout = 5000)
+  @Test
+  @Timeout(value = 5)
   public void testOrderEnvByDependencies() {
     final Map<String, Set<String>> fakeDeps = new HashMap<>();
     fakeDeps.put("Aval", Collections.emptySet()); // A has no dependencies
@@ -2210,19 +2329,17 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
         };
 
     try {
-      Assert.assertNull("Ordering a null env map must return a null value.",
-          sb.orderEnvByDependencies(null));
+      assertNull(sb.orderEnvByDependencies(null),
+          "Ordering a null env map must return a null value.");
     } catch (Exception e) {
-      Assert.fail("null value is to be supported");
+      fail("null value is to be supported");
     }
 
     try {
-      Assert.assertEquals(
-          "Ordering an empty env map must return an empty map.",
-          0, sb.orderEnvByDependencies(Collections.emptyMap()).size()
-      );
+      assertEquals(0, sb.orderEnvByDependencies(Collections.emptyMap()).size(),
+          "Ordering an empty env map must return an empty map.");
     } catch (Exception e) {
-      Assert.fail("Empty map is to be supported");
+      fail("Empty map is to be supported");
     }
 
     final Map<String, String> combination = new LinkedHashMap<>();
@@ -2268,4 +2385,318 @@ public class TestContainerLaunch extends BaseContainerManagerTest {
       }
     }
   }
+
+  @Test
+  public void testDistributedCacheDirs() throws Exception {
+    Container container = mock(Container.class);
+    ApplicationId appId =
+        ApplicationId.newInstance(System.currentTimeMillis(), 1);
+    ContainerId containerId = ContainerId
+        .newContainerId(ApplicationAttemptId.newInstance(appId, 1), 1);
+    when(container.getContainerId()).thenReturn(containerId);
+    when(container.getUser()).thenReturn("test");
+    when(container.localizationCountersAsString()).thenReturn("1,2,3,4,5");
+
+    when(container.getLocalizedResources())
+        .thenReturn(Collections.<Path, List<String>> emptyMap());
+    Dispatcher dispatcher = mock(Dispatcher.class);
+
+    ContainerLaunchContext clc = mock(ContainerLaunchContext.class);
+    when(clc.getCommands()).thenReturn(Collections.<String>emptyList());
+    when(container.getLaunchContext()).thenReturn(clc);
+
+    @SuppressWarnings("rawtypes")
+    ContainerExitHandler eventHandler =
+        mock(ContainerExitHandler.class);
+    when(dispatcher.getEventHandler()).thenReturn(eventHandler);
+
+    Application app = mock(Application.class);
+    when(app.getAppId()).thenReturn(appId);
+    when(app.getUser()).thenReturn("test");
+
+    Credentials creds = mock(Credentials.class);
+    when(container.getCredentials()).thenReturn(creds);
+
+    ((NMContext) context).setNodeId(NodeId.newInstance("127.0.0.1", HTTP_PORT));
+    ContainerExecutor mockExecutor = mock(ContainerExecutor.class);
+
+    LocalDirsHandlerService mockDirsHandler =
+        mock(LocalDirsHandlerService.class);
+
+    List <String> localDirsForRead = new ArrayList<String>();
+    String localDir1 =
+      new File("target", this.getClass().getSimpleName() + "-localDir1")
+        .getAbsoluteFile().toString();
+    String localDir2 =
+      new File("target", this.getClass().getSimpleName() + "-localDir2")
+        .getAbsoluteFile().toString();
+    localDirsForRead.add(localDir1);
+    localDirsForRead.add(localDir2);
+
+    List <String> localDirs = new ArrayList();
+    localDirs.add(localDir1);
+    Path logPathForWrite = new Path(localDirs.get(0));
+
+    when(mockDirsHandler.areDisksHealthy()).thenReturn(true);
+    when(mockDirsHandler.getLocalDirsForRead()).thenReturn(localDirsForRead);
+    when(mockDirsHandler.getLocalDirs()).thenReturn(localDirs);
+    when(mockDirsHandler.getLogDirs()).thenReturn(localDirs);
+    when(mockDirsHandler.getLogPathForWrite(anyString(),
+        anyBoolean())).thenReturn(logPathForWrite);
+    when(mockDirsHandler.getLocalPathForWrite(anyString()))
+        .thenReturn(logPathForWrite);
+    when(mockDirsHandler.getLocalPathForWrite(anyString(), anyLong(),
+      anyBoolean())).thenReturn(logPathForWrite);
+
+    ContainerLaunch launch = new ContainerLaunch(context, conf, dispatcher,
+        mockExecutor, app, container, mockDirsHandler, containerManager);
+    launch.call();
+
+    ArgumentCaptor <ContainerStartContext> ctxCaptor =
+        ArgumentCaptor.forClass(ContainerStartContext.class);
+    verify(mockExecutor, times(1)).launchContainer(ctxCaptor.capture());
+    ContainerStartContext ctx = ctxCaptor.getValue();
+
+    assertEquals(StringUtils.join(",",
+        launch.getNMFilecacheDirs(localDirsForRead)),
+        StringUtils.join(",", ctx.getFilecacheDirs()));
+    assertEquals(StringUtils.join(",",
+        launch.getUserFilecacheDirs(localDirsForRead)),
+        StringUtils.join(",", ctx.getUserFilecacheDirs()));
+  }
+
+  @Test
+  @Timeout(value = 20)
+  public void testFilesAndEnvWithoutHTTPS() throws Exception {
+    testFilesAndEnv(false);
+  }
+
+  @Test
+  @Timeout(value = 20)
+  public void testFilesAndEnvWithHTTPS() throws Exception {
+    testFilesAndEnv(true);
+  }
+
+  private void testFilesAndEnv(boolean https) throws Exception {
+    // setup mocks
+    Dispatcher dispatcher = mock(Dispatcher.class);
+    EventHandler handler = mock(EventHandler.class);
+    when(dispatcher.getEventHandler()).thenReturn(handler);
+    ContainerExecutor containerExecutor = mock(ContainerExecutor.class);
+    doAnswer(new Answer<Void>() {
+      @Override
+      public Void answer(InvocationOnMock invocation) throws Throwable {
+        Object[] args = invocation.getArguments();
+        DataOutputStream dos = (DataOutputStream) args[0];
+        dos.writeBytes("script");
+        return null;
+      }
+    }).when(containerExecutor).writeLaunchEnv(
+        any(), any(), any(), any(), any(), any(), any());
+    Application app = mock(Application.class);
+    ApplicationId appId = mock(ApplicationId.class);
+    when(appId.toString()).thenReturn("1");
+    when(app.getAppId()).thenReturn(appId);
+    Container container = mock(Container.class);
+    ContainerId id = mock(ContainerId.class);
+    when(id.toString()).thenReturn("1");
+    when(container.getContainerId()).thenReturn(id);
+    when(container.getUser()).thenReturn("user");
+    ContainerLaunchContext clc = mock(ContainerLaunchContext.class);
+    when(clc.getCommands()).thenReturn(Lists.newArrayList());
+    when(container.getLaunchContext()).thenReturn(clc);
+    Credentials credentials = mock(Credentials.class);
+    when(container.getCredentials()).thenReturn(credentials);
+    when(container.localizationCountersAsString()).thenReturn("1,2,3,4,5");
+    doAnswer(new Answer<Void>() {
+      @Override
+      public Void answer(InvocationOnMock invocation) throws Throwable {
+        Object[] args = invocation.getArguments();
+        DataOutputStream dos = (DataOutputStream) args[0];
+        dos.writeBytes("credentials");
+        return null;
+      }
+    }).when(credentials).writeTokenStorageToStream(any(DataOutputStream.class));
+    if (https) {
+      when(credentials.getSecretKey(
+          AMSecretKeys.YARN_APPLICATION_AM_KEYSTORE))
+          .thenReturn("keystore".getBytes());
+      when(credentials.getSecretKey(
+          AMSecretKeys.YARN_APPLICATION_AM_KEYSTORE_PASSWORD))
+          .thenReturn("keystore_password".getBytes());
+      when(credentials.getSecretKey(
+          AMSecretKeys.YARN_APPLICATION_AM_TRUSTSTORE))
+          .thenReturn("truststore".getBytes());
+      when(credentials.getSecretKey(
+          AMSecretKeys.YARN_APPLICATION_AM_TRUSTSTORE_PASSWORD))
+          .thenReturn("truststore_password".getBytes());
+    }
+
+    // call containerLaunch
+    ContainerLaunch containerLaunch = new ContainerLaunch(
+        distContext, conf, dispatcher,
+        containerExecutor, app, container, dirsHandler, containerManager);
+    containerLaunch.call();
+
+    // verify the nmPrivate paths and files
+    ArgumentCaptor<ContainerStartContext> cscArgument =
+        ArgumentCaptor.forClass(ContainerStartContext.class);
+    verify(containerExecutor, times(1)).launchContainer(cscArgument.capture());
+    ContainerStartContext csc = cscArgument.getValue();
+    Path nmPrivate = dirsHandler.getLocalPathForWrite(
+        ResourceLocalizationService.NM_PRIVATE_DIR + Path.SEPARATOR +
+            appId.toString() + Path.SEPARATOR + id.toString());
+    assertEquals(new Path(nmPrivate, ContainerLaunch.CONTAINER_SCRIPT),
+        csc.getNmPrivateContainerScriptPath());
+    assertEquals(new Path(nmPrivate,
+        String.format(ContainerExecutor.TOKEN_FILE_NAME_FMT,
+            id.toString())), csc.getNmPrivateTokensPath());
+    assertEquals("script",
+        readStringFromPath(csc.getNmPrivateContainerScriptPath()));
+    assertEquals("credentials",
+        readStringFromPath(csc.getNmPrivateTokensPath()));
+    if (https) {
+      assertEquals(new Path(nmPrivate, ContainerLaunch.KEYSTORE_FILE),
+          csc.getNmPrivateKeystorePath());
+      assertEquals(new Path(nmPrivate, ContainerLaunch.TRUSTSTORE_FILE),
+          csc.getNmPrivateTruststorePath());
+      assertEquals("keystore",
+          readStringFromPath(csc.getNmPrivateKeystorePath()));
+      assertEquals("truststore",
+          readStringFromPath(csc.getNmPrivateTruststorePath()));
+    } else {
+      assertNull(csc.getNmPrivateKeystorePath());
+      assertNull(csc.getNmPrivateTruststorePath());
+    }
+
+    // verify env
+    ArgumentCaptor<Map> envArgument = ArgumentCaptor.forClass(Map.class);
+    verify(containerExecutor, times(1)).writeLaunchEnv(any(),
+        envArgument.capture(), any(), any(), any(), any(), any());
+    Map env = envArgument.getValue();
+    Path workDir = dirsHandler.getLocalPathForWrite(
+        ContainerLocalizer.USERCACHE + Path.SEPARATOR + container.getUser() +
+            Path.SEPARATOR + ContainerLocalizer.APPCACHE + Path.SEPARATOR +
+            app.getAppId().toString() + Path.SEPARATOR +
+            container.getContainerId().toString());
+    assertEquals(new Path(workDir,
+            ContainerLaunch.FINAL_CONTAINER_TOKENS_FILE).toUri().getPath(),
+        env.get(ApplicationConstants.CONTAINER_TOKEN_FILE_ENV_NAME));
+    if (https) {
+      assertEquals(new Path(workDir,
+              ContainerLaunch.KEYSTORE_FILE).toUri().getPath(),
+          env.get(ApplicationConstants.KEYSTORE_FILE_LOCATION_ENV_NAME));
+      assertEquals("keystore_password",
+          env.get(ApplicationConstants.KEYSTORE_PASSWORD_ENV_NAME));
+      assertEquals(new Path(workDir,
+              ContainerLaunch.TRUSTSTORE_FILE).toUri().getPath(),
+          env.get(ApplicationConstants.TRUSTSTORE_FILE_LOCATION_ENV_NAME));
+      assertEquals("truststore_password",
+          env.get(ApplicationConstants.TRUSTSTORE_PASSWORD_ENV_NAME));
+    } else {
+      assertNull(env.get("KEYSTORE_FILE_LOCATION"));
+      assertNull(env.get("KEYSTORE_PASSWORD"));
+      assertNull(env.get("TRUSTSTORE_FILE_LOCATION"));
+      assertNull(env.get("TRUSTSTORE_PASSWORD"));
+    }
+  }
+
+  private String readStringFromPath(Path p) throws IOException {
+    FileSystem fs = FileSystem.get(conf);
+    try (FSDataInputStream is = fs.open(p)) {
+      byte[] bytes = IOUtils.readFullyToByteArray(is);
+      return new String(bytes);
+    }
+  }
+
+  @Test
+  @Timeout(value = 20)
+  public void testExpandNmAdmEnv() throws Exception {
+    // setup mocks
+    Dispatcher dispatcher = mock(Dispatcher.class);
+    EventHandler handler = mock(EventHandler.class);
+    when(dispatcher.getEventHandler()).thenReturn(handler);
+    ContainerExecutor containerExecutor = mock(ContainerExecutor.class);
+    doAnswer(new Answer<Void>() {
+      @Override
+      public Void answer(InvocationOnMock invocation) throws Throwable {
+        Object[] args = invocation.getArguments();
+        DataOutputStream dos = (DataOutputStream) args[0];
+        dos.writeBytes("script");
+        return null;
+      }
+    }).when(containerExecutor).writeLaunchEnv(
+        any(), any(), any(), any(), any(), any(), any());
+    Application app = mock(Application.class);
+    ApplicationId appId = mock(ApplicationId.class);
+    when(appId.toString()).thenReturn("1");
+    when(app.getAppId()).thenReturn(appId);
+    Container container = mock(Container.class);
+    ContainerId id = mock(ContainerId.class);
+    when(id.toString()).thenReturn("1");
+    when(container.getContainerId()).thenReturn(id);
+    when(container.getUser()).thenReturn("user");
+    ContainerLaunchContext clc = mock(ContainerLaunchContext.class);
+    when(clc.getCommands()).thenReturn(Lists.newArrayList());
+    when(container.getLaunchContext()).thenReturn(clc);
+    Credentials credentials = mock(Credentials.class);
+    when(container.getCredentials()).thenReturn(credentials);
+    when(container.localizationCountersAsString()).thenReturn("1,2,3,4,5");
+
+    // Define user environment variables.
+    Map<String, String> userSetEnv = new HashMap<String, String>();
+    String userVar = "USER_VAR";
+    String userVarVal = "user-var-value";
+    userSetEnv.put(userVar, userVarVal);
+    when(clc.getEnvironment()).thenReturn(userSetEnv);
+
+    YarnConfiguration localConf = new YarnConfiguration(conf);
+
+    // Admin Env var that depends on USER_VAR1
+    String testKey1 = "TEST_KEY1";
+    String testVal1 = "relies on {{USER_VAR}}";
+    localConf.set(
+        YarnConfiguration.NM_ADMIN_USER_ENV + "." + testKey1, testVal1);
+    String testVal1Expanded; // this is what we expect after {{}} expansion
+    if (Shell.WINDOWS) {
+      testVal1Expanded = "relies on %USER_VAR%";
+    } else {
+      testVal1Expanded = "relies on $USER_VAR";
+    }
+    // Another Admin Env var that depends on the first one
+    String testKey2 = "TEST_KEY2";
+    String testVal2 = "relies on {{TEST_KEY1}}";
+    localConf.set(
+        YarnConfiguration.NM_ADMIN_USER_ENV + "." + testKey2, testVal2);
+    String testVal2Expanded; // this is what we expect after {{}} expansion
+    if (Shell.WINDOWS) {
+      testVal2Expanded = "relies on %TEST_KEY1%";
+    } else {
+      testVal2Expanded = "relies on $TEST_KEY1";
+    }
+
+    // call containerLaunch
+    ContainerLaunch containerLaunch = new ContainerLaunch(
+        distContext, localConf, dispatcher,
+        containerExecutor, app, container, dirsHandler, containerManager);
+    containerLaunch.call();
+
+    // verify the nmPrivate paths and files
+    ArgumentCaptor<ContainerStartContext> cscArgument =
+        ArgumentCaptor.forClass(ContainerStartContext.class);
+    verify(containerExecutor, times(1)).launchContainer(cscArgument.capture());
+    ContainerStartContext csc = cscArgument.getValue();
+    assertEquals("script",
+        readStringFromPath(csc.getNmPrivateContainerScriptPath()));
+
+    // verify env
+    ArgumentCaptor<Map> envArgument = ArgumentCaptor.forClass(Map.class);
+    verify(containerExecutor, times(1)).writeLaunchEnv(any(),
+        envArgument.capture(), any(), any(), any(), any(), any());
+    Map env = envArgument.getValue();
+    assertEquals(userVarVal, env.get(userVar));
+    assertEquals(testVal1Expanded, env.get(testKey1));
+    assertEquals(testVal2Expanded, env.get(testKey2));
+  }
+
 }
